src/style.css
/* fonts */
@import url('https://fonts.googleapis.com/css?family=Inconsolata');

/* body */
body {
	background-color: #393E46;
	color: #222831;
	font-family: 'Inconsolata', sans-serif;
	line-height: 1.8;
	padding-top: 3em;
}

/* main semantics */
h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
	color: #007177;
}

a {
	border-bottom: none;
	color: #007177;
    display: inline-block;
    position: relative;
}

a:hover,
a:focus {
	color: #007177;
	text-decoration: none;
}

a::before {
	background: #007177;
	bottom: 0;
	content: '';
	height: 1px;
	left: 0;
	position: absolute;
	-webkit-transform: scale3d(0, 1, 1);
	        transform: scale3d(0, 1, 1);
	-webkit-transition: -webkit-transform 0.1s;
	        transition: transform 0.1s;
	width: 100%;
}

a:hover::before,
a:focus::before {
	-webkit-transform: scale3d(1, 1, 1);
	        transform: scale3d(1, 1, 1);
	-webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	-webkit-transition-duration: 0.3s;
	        transition-duration: 0.3s;
}

ul {
	padding-left: 1em;
}

*:focus {
	outline-color: #007177 !important;
	outline-offset: 3px !important;
}

/* navbar */
nav.navbar {
	background-color: #007177;
	border: none;
	font-size: 1.2em;
	height: 3em;
	padding-top: 0;
	text-transform: uppercase;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
	border: none;
}

.navbar-collapse.collapsing,
.navbar-collapse.in {
    transition-duration: 0.1s;
}

button.navbar-toggle {
	font-size: 0.8em;
	line-height: 1;
}

.navbar-collapse[aria-expanded="true"] {
    animation-duration: 0.4s;
    animation-fill-mode: forwards;
	background-color: #007177;
	box-shadow: none;
    min-height: 100vh;
    transition-duration: 0.1s;
}

.navbar-collapse[aria-expanded="true"] .navbar-nav {
	display: table;
    margin: auto;
}

.navbar-collapse[aria-expanded="true"] .nav-link {
	margin: 2em 0;
}

.navbar-collapse[aria-expanded="true"] .nav-item:last-of-type {
	padding-bottom: 4em;
}

.navbar-default .navbar-toggle,
.navbar-default .navbar-toggle:focus,
.navbar-default .navbar-toggle:hover {
	background-color: #007177;
	border: 0;
}

.navbar-default .navbar-toggle .icon-bar {
	background-color: #222831;
}

nav.navbar li.nav-item a {
	border-bottom: none;
	color: #EAEAEA;
}

.navbar-default .nav-link {
	color: #b5b5b5;
	display: block;
	margin: 0 2em 0 0;
	padding: 1em 0;
	position: relative;
	text-align: center;
	-webkit-transition: color 0.3s;
	        transition: color 0.3s;
}

.navbar-default .nav-link:hover,
.navbar-default .nav-link:focus,
.navbar-default .nav-item.active .nav-link,
.navbar-default .nav-item.active .nav-link:focus,
.navbar-default .nav-item.active .nav-link:hover {
	background-color: transparent;
	color: #393E46;
}

.navbar-default .nav-link::before {
	background: #393E46;
	bottom: 0;
	content: '';
	height: 5px;
	left: 0;
	position: absolute;
	-webkit-transform: scale3d(0, 1, 1);
	        transform: scale3d(0, 1, 1);
	-webkit-transition: -webkit-transform 0.1s;
	        transition: transform 0.1s;
	width: 100%;
}

.navbar-default .nav-link:hover::before,
.navbar-default .nav-link:focus::before,
.navbar-default .nav-item.active .nav-link::before {
	-webkit-transform: scale3d(1, 1, 1);
	        transform: scale3d(1, 1, 1);
	-webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	-webkit-transition-duration: 0.3s;
	        transition-duration: 0.3s;
}

nav.stick {
    margin-top:12px;
    position: fixed;
    top: 0;
    z-index: 10000;
}

/* header */
header {
	background-color: #EEEEEE;
	padding-top: 2em;
	width: 100%;
}
header img {
    max-width: 278px;
	width: 100%;
}

h3:before {
    background: currentColor;
    content: '';
    display: block;
    height: 5px;
    margin-bottom: -5px;
    width: 100%;
}

h3 span:before {
    background: #222831;
    content: '';
    display: block;
    height: 5px;
    margin-bottom: 0.5em;
    width: 2.5em;
}

.anchor {
	display: block;
	height: 3em;
	margin-top: -2em;
	visibility: hidden;
}

/* main */
main {
	background-color: #EEEEEE;
	padding-bottom: 2em;
	width: 100%;
}

/* footer */
footer {
	background-color: #007177;
    bottom: 0;
	color: #EAEAEA;
    height: 4em;
    padding-top: 1.5em;
	width: 100%;
}

/* specific styles */
.job-list,
.education-list,
.volunteer-list,
.language-list,
.skill-list {
	list-style: none;
	padding-left: 0;
}

.list-item {
	display: block;
}

.timeperiod {
	display: block;
	vertical-align: top;
}

button.summary {
	background: none;
	border: none;
	font-style: italic;
	padding: 0;
	text-align: left;
}

.summary:after {
	content: ' [lees meer...]';
	display: inline-block;
	padding-left: 0.5em;
}

.summary[aria-expanded="true"]:after {
	content: '';
}

.item-description {
	display: inline-block;
	padding-bottom: 1em;
	padding-left: 2em;
}

span.location {
	display: block;
    margin-top: -0.3em;
    line-height: 1.5;
}

.job-description {
	margin: 0;
}

.used-methods {
	margin: 1em 0 1em 1em;
}

.progress {
	background-color: #EEEEEE;
	border-radius: 0;
	box-shadow: none;
	height: 2em;
	outline: 1px dashed #007177;
	padding: 0.15em;
	width: auto;
}

.progress-bar {
	background-color: #007177;
	box-shadow: none;
	line-height: 2;
	padding-left: 1em;
	text-align: start;
}

/* foundation icons */
[class*="fi-"]:before {
  display: inline-block;
  font-size: 1.8em;
  width: 1.2em;
}

body .text-muted {
    color: #686868;
}

@media screen and (min-width: 768px) {
	.timeperiod {
		display: inline-block;
		width: 9em;
	}
	.item-description {
		max-width: 75%;
		padding-left: 0;
	}
}

/* specific print styles */
@media print {
	.navbar, footer { display: none !important; }

	.container, .container-fluid { display: inline; }
	.anchor#werkervaring { page-break-before: always; }
	.list-item, .aside-row { page-break-inside: avoid; }

	header img { display: none; }

	h3:before { border-top: 3px solid #222831; content: ''; display: block; width: 100%; }

	div.collapse { display: block; }
	.summary:after { content: ''; }

	.skill-list li { display: inline-block; margin: 1em 1em 0 0; width: 45%; }
	.progress { height: 0.8em; }
	.progress-label { margin: -3em 0 0 -1em; position: absolute; }
	.progress-bar { border-top: 0.5em solid #007177; }
}

